--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
-    <script src="/task-01.js"></script>
-    <script src="/task-02.js"></script>
+    <script src="/js/task-01.js"></script>
   </head>
   <body>
     <ul id="categories">
