--- a/task-02.html
+++ b/task-02.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/common.css" />
     <title>task-02</title>
-    <script src="/js/task-02.js"></script>
   </head>
   <body>
+    <a href="index.html">Go back</a>
     <ul id="ingredients"></ul>
   </body>
+  <script src="/js/task-02.js"></script>
 </html>
