--- a/task-01.html
+++ b/task-01.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/common.css" />
     <title>Document</title>
-    <script src="/js/task-01.js"></script>
   </head>
   <body>
+    <a href="index.html">Go back</a>
     <ul id="categories">
       <li class="item">
         <h2>Animals</h2>
@@ -39,4 +39,5 @@
       </li>
     </ul>
   </body>
+  <script src="/js/task-01.js"></script>
 </html>
