--- a/task-05.html
+++ b/task-05.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/common.css" />
     <title>task-05</title>
-    <script src="/js/task-05.js"></script>
   </head>
   <body>
+    <a href="index.html">Go back</a>
     <input type="text" id="name-input" placeholder="Please enter your name" />
     <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
   </body>
+  <script src="/js/task-05.js"></script>
 </html>
