--- a/task-06.html
+++ b/task-06.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/common.css" />
     <title>task-06</title>
-    <script src="/js/task-06.js"></script>
   </head>
   <body>
+    <a href="index.html">Go back</a>
     <input
       type="text"
       id="validation-input"
@@ -15,4 +16,5 @@
       placeholder="Please enter 6 symbols"
     />
   </body>
+  <script src="/js/task-06.js"></script>
 </html>
