--- a/task-07.html
+++ b/task-07.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/common.css" />
     <title>task-07</title>
-    <script src="/js/task-07.js"></script>
   </head>
   <body>
+    <a href="index.html">Go back</a>
     <input id="font-size-control" type="range" min="16" max="96" />
     <br />
     <span id="text">Abracadabra!</span>
   </body>
+  <script src="/js/task-07.js"></script>
 </html>
