--- a/task-08.html
+++ b/task-08.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/common.css" />
     <title>task-08</title>
-    <script src="/task-08.js"></script>
   </head>
   <body>
+    <a href="index.html">Go back</a>
     <form class="login-form">
       <label>
         Email
@@ -20,4 +21,5 @@
       <button type="submit">Login</button>
     </form>
   </body>
+  <script src="/js/task-08.js"></script>
 </html>
