--- a/task-09.html
+++ b/task-09.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/common.css" />
     <title>task-09</title>
-    <script src="/task-09.js"></script>
   </head>
   <body>
+    <a href="index.html">Go back</a>
     <div class="widget">
       <p>Background color: <span class="color">-</span></p>
       <button type="button" class="change-color">Change color</button>
     </div>
   </body>
+  <script src="/js/task-09.js"></script>
 </html>
