--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/common.css" />
+    <title>Homework 6</title>
+    <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
     <ul>
@@ -18,7 +18,7 @@
       <li><a href="task-07.html">Task 7</a></li>
       <li><a href="task-08.html">Task 8</a></li>
       <li><a href="task-09.html">Task 9</a></li>
-      <li><a href="task-10.html">Task 10</a></li>
+      <li><a href="task-10.html">Task 10 (optional)</a></li>
     </ul>
   </body>
 </html>
