--- a/task-03.html
+++ b/task-03.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/common.css" />
-    <title>task-03</title>
+    <title>Task 3</title>
+    <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <a href="index.html">Go back</a>
+    <p><a href="index.html">Go back</a></p>
+
     <ul class="gallery"></ul>
+
+    <script src="js/task-03.js" type="module"></script>
   </body>
-  <script src="/js/task-03.js"></script>
 </html>
