--- a/task-07.html
+++ b/task-07.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/common.css" />
-    <title>task-07</title>
+    <title>Task 7</title>
+    <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <a href="index.html">Go back</a>
+    <p><a href="index.html">Go back</a></p>
+
     <input id="font-size-control" type="range" min="16" max="96" />
     <br />
     <span id="text">Abracadabra!</span>
+
+    <script src="js/task-07.js" type="module"></script>
   </body>
-  <script src="/js/task-07.js"></script>
 </html>
