--- a/task-08.html
+++ b/task-08.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/common.css" />
-    <title>task-08</title>
+    <title>Task 8</title>
+    <link rel="stylesheet" href="css/common.css" />
+    <style>
+      .login-form {
+        max-width: 320px;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .login-form label {
+        margin-bottom: 16px;
+      }
+
+      .login-form input,
+      .login-form button {
+        width: 100%;
+        padding: 4px;
+        font: inherit;
+      }
+    </style>
   </head>
   <body>
-    <a href="index.html">Go back</a>
+    <p><a href="index.html">Go back</a></p>
+
     <form class="login-form">
       <label>
         Email
@@ -20,6 +39,7 @@
       </label>
       <button type="submit">Login</button>
     </form>
+
+    <script src="js/task-08.js" type="module"></script>
   </body>
-  <script src="/js/task-08.js"></script>
 </html>
